Include baza.js script in index.html
Added script tag to include baza.js for functionality.

--- a/index.html
+++ b/index.html
@@ -98,10 +98,9 @@
 <div class="container">
     <div id="wynik"></div>
 </div>
-
+    
+<script src="baza.js"></script>
 <script type="module">
-    import { BAZA_OSTRZEZEN } from './baza.js';
-
     // Funkcja do pobierania aktywnych maszynistów z API i wypełniania select
     async function loadMaszynisci() {
         const select = document.getElementById('maszynista');
