--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+Oto poprawiona wersja index.html, która rozwiązuje błąd z importem i powinna działać od razu po wrzuceniu (zakładając, że plik baza.js istnieje i ma poprawny named export):
+HTML<!DOCTYPE html>
 <html lang="pl">
 <head>
     <meta charset="UTF-8" />
@@ -41,7 +42,6 @@
             font-weight: bold;
         }
         button:hover { background: #1565c0; }
-        button:disabled { opacity: 0.6; cursor: not-allowed; }
 
         .wos-table {
             width: 100%;
@@ -93,7 +93,13 @@
 </div>
 
 <script type="module">
+    // ──────────────────────────────────────────────────────────────
+    // Poprawiony import – upewniamy się, że ścieżka jest prawidłowa
+    // ──────────────────────────────────────────────────────────────
     import { BAZA_OSTRZEZEN } from './baza.js';
+
+    // Sprawdzenie, czy import zadziałał (do debugu – możesz później usunąć)
+    console.log('Baza zaimportowana, liczba stacji:', Object.keys(BAZA_OSTRZEZEN).length);
 
     async function zaladujMaszynistow() {
         const select = document.getElementById('maszynista');
