--- a/index.html
+++ b/index.html
@@ -1,46 +1,82 @@
-HTML<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pl">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>WOS TD2 - Generator ostrzeżeń stałych</title>
     <style>
-        body { 
-            font-family: Arial, Helvetica, sans-serif; 
-            margin: 20px; 
-            background: #f9f9f9; 
-            color: #000; 
+        :root {
+            --bg: #f9f9f9;
+            --text: #000;
+            --container-bg: white;
+            --border: #aaa;
+            --shadow: rgba(0,0,0,0.15);
+            --primary: #0d47a1;
+            --primary-hover: #1565c0;
+            --table-header: #e8e8e8;
+            --station-header: #fffacd;
         }
-        h1 { color: #0d47a1; text-align: center; margin-bottom: 0.4em; }
-        .container { 
-            background: white; 
-            padding: 20px; 
-            border: 1px solid #aaa; 
-            max-width: 1500px; 
+
+        [data-theme="dark"] {
+            --bg: #121212;
+            --text: #e0e0e0;
+            --container-bg: #1e1e1e;
+            --border: #444;
+            --shadow: rgba(0,0,0,0.6);
+            --primary: #4a90e2;
+            --primary-hover: #6aa8f7;
+            --table-header: #2a2a2a;
+            --station-header: #3a3a3a;
+        }
+
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            margin: 20px;
+            background: var(--bg);
+            color: var(--text);
+            transition: background 0.4s, color 0.4s;
+        }
+
+        h1 { color: var(--primary); text-align: center; margin-bottom: 0.4em; }
+
+        .container {
+            background: var(--container-bg);
+            padding: 20px;
+            border: 1px solid var(--border);
+            max-width: 1500px;
             margin: 0 auto 30px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.15);
+            box-shadow: 0 2px 10px var(--shadow);
+            border-radius: 8px;
+            transition: all 0.4s;
         }
+
         label { display: block; margin: 12px 0 4px; font-weight: bold; }
-        select { 
-            width: 100%; 
-            padding: 10px; 
-            border: 1px solid #666; 
-            border-radius: 4px; 
-            font-family: monospace; 
+
+        select {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid var(--border);
+            border-radius: 4px;
+            font-family: monospace;
             font-size: 1.05em;
+            background: var(--container-bg);
+            color: var(--text);
             box-sizing: border-box;
         }
-        button { 
-            padding: 10px 22px; 
-            margin: 12px 12px 12px 0; 
-            background: #0d47a1; 
-            color: white; 
-            border: none; 
-            border-radius: 4px; 
-            cursor: pointer; 
+
+        button {
+            padding: 10px 22px;
+            margin: 12px 12px 12px 0;
+            background: var(--primary);
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
             font-weight: bold;
+            transition: background 0.3s;
         }
-        button:hover { background: #1565c0; }
+
+        button:hover { background: var(--primary-hover); }
 
         .wos-table {
             width: 100%;
@@ -48,15 +84,18 @@ HTML<!DOCTYPE html>
             font-size: 9.5pt;
             margin-top: 12px;
         }
+
         .wos-table th, .wos-table td {
-            border: 1px solid black;
+            border: 1px solid var(--border);
             padding: 4px 6px;
             text-align: center;
             vertical-align: middle;
         }
-        .wos-table th { background-color: #e8e8e8; font-weight: bold; }
+
+        .wos-table th { background-color: var(--table-header); font-weight: bold; }
+
         .wos-table .station-header {
-            background-color: #fffacd;
+            background-color: var(--station-header);
             font-size: 11pt;
             font-weight: bold;
             text-align: left;
@@ -64,14 +103,49 @@ HTML<!DOCTYPE html>
             height: 30px;
         }
 
+        /* Przełącznik motywu – prawy górny róg */
+        .theme-toggle {
+            position: fixed;
+            top: 16px;
+            right: 20px;
+            z-index: 1000;
+            background: rgba(255,255,255,0.9);
+            border-radius: 50%;
+            width: 44px;
+            height: 44px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+            transition: all 0.3s;
+        }
+
+        [data-theme="dark"] .theme-toggle {
+            background: rgba(30,30,30,0.9);
+        }
+
+        .theme-toggle:hover {
+            transform: scale(1.1);
+        }
+
+        .theme-toggle span {
+            font-size: 24px;
+        }
+
         @media print {
-            .no-print { display: none !important; }
+            .no-print, .theme-toggle { display: none !important; }
             body { margin: 0; background: white; }
             .container { border: none; box-shadow: none; padding: 0; margin: 0; }
         }
     </style>
 </head>
-<body>
+<body data-theme="light">
+
+<!-- Przełącznik motywu -->
+<div class="theme-toggle" onclick="toggleTheme()" title="Zmień motyw">
+    <span id="theme-icon">☀️</span>
+</div>
 
 <div class="container no-print">
     <h1>Wykaz Ostrzeżeń Stałych (WOS) – TD2</h1>
@@ -92,79 +166,62 @@ HTML<!DOCTYPE html>
 </div>
 
 <script type="module">
-    // ──────────────────────────────────────────────────────────────
-    // Poprawiony import – upewniamy się, że ścieżka jest prawidłowa
-    // ──────────────────────────────────────────────────────────────
     import { BAZA_OSTRZEZEN } from './baza.js';
-
-    // Sprawdzenie, czy import zadziałał (do debugu – możesz później usunąć)
-    console.log('Baza zaimportowana, liczba stacji:', Object.keys(BAZA_OSTRZEZEN).length);
 
     async function zaladujMaszynistow() {
         const select = document.getElementById('maszynista');
-        
         try {
-            const response = await fetch('https://stacjownik.spythere.eu/api/getActiveData', {
-                cache: 'no-cache'
-            });
-
+            const response = await fetch('https://stacjownik.spythere.eu/api/getActiveData', { cache: 'no-cache' });
             if (!response.ok) throw new Error(`API: ${response.status}`);
-
             const data = await response.json();
             const maszynisci = new Set();
-
             if (Array.isArray(data)) {
                 data.forEach(train => {
-                    if (train?.driverName?.trim()) {
-                        maszynisci.add(train.driverName.trim());
-                    }
+                    if (train?.driverName?.trim()) maszynisci.add(train.driverName.trim());
                 });
             }
-
             select.innerHTML = '<option value="" disabled selected>Wybierz maszynistę</option>';
-
             if (maszynisci.size === 0) {
                 select.innerHTML += '<option disabled>Brak aktywnych maszynistów</option>';
                 return;
             }
-
-            [...maszynisci]
-                .sort((a, b) => a.localeCompare(b, 'pl'))
-                .forEach(nick => {
-                    const opt = document.createElement('option');
-                    opt.value = nick;
-                    opt.textContent = nick;
-                    select.appendChild(opt);
-                });
-
+            [...maszynisci].sort((a,b)=>a.localeCompare(b,'pl')).forEach(nick => {
+                const opt = document.createElement('option');
+                opt.value = nick;
+                opt.textContent = nick;
+                select.appendChild(opt);
+            });
         } catch (err) {
             console.error('Błąd pobierania maszynistów:', err);
-            select.innerHTML = '<option disabled>Błąd ładowania listy maszynistów</option>';
+            select.innerHTML = '<option disabled>Błąd ładowania listy</option>';
         }
     }
 
     document.addEventListener('DOMContentLoaded', zaladujMaszynistow);
 
     document.getElementById('maszynista').addEventListener('change', function() {
-        if (this.value) {
-            generujWOS();
-        }
+        if (this.value) generujWOS();
     });
 
-    function normalizuj(nazwa) {
-        return (nazwa || "").trim().toLowerCase()
-            .replace(/[ąćęłńóśźż]/g, c => ({'ą':'a','ć':'c','ę':'e','ł':'l','ń':'n','ó':'o','ś':'s','ź':'z','ż':'z'})[c] || c);
+    function toggleTheme() {
+        const body = document.body;
+        const current = body.getAttribute('data-theme') || 'light';
+        const next = current === 'light' ? 'dark' : 'light';
+        body.setAttribute('data-theme', next);
+        document.getElementById('theme-icon').textContent = next === 'dark' ? '🌙' : '☀️';
+        localStorage.setItem('theme', next);
     }
 
-    function formatKm(km) {
-        return km ? km.replace('.', ',') : '—';
+    // Przywracanie zapamiętanego motywu
+    if (localStorage.getItem('theme') === 'dark' ||
+        (!localStorage.getItem('theme') && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+        document.body.setAttribute('data-theme', 'dark');
+        document.getElementById('theme-icon').textContent = '🌙';
     }
 
     function generujWOS() {
         const maszynista = document.getElementById("maszynista").value || "—";
-
         let lp = 1;
-
         let html = `
         <h1 style="margin:0 0 12px; font-size:15pt; text-align:center;">
             Wykaz Ostrzeżeń Stałych<br>
@@ -173,7 +230,6 @@ HTML<!DOCTYPE html>
         <p style="text-align:center; margin-bottom:12px;">
             Maszynista: <strong>${maszynista}</strong>
         </p>
-
         <table class="wos-table">
           <thead>
             <tr>
@@ -195,12 +251,11 @@ HTML<!DOCTYPE html>
               <th>9</th>
             </tr>
           </thead>
-          <tbody>`;
-
-        html += "</tbody></table>";
-
-        html += '<p style="text-align:center; color:#c00; margin-top:30px; font-size:14pt;"><b>Wybierz maszynistę, aby zobaczyć ostrzeżenia</b></p>';
-
+          <tbody></tbody>
+        </table>
+        <p style="text-align:center; color:#c00; margin-top:30px; font-size:14pt;">
+            <b>Wybierz maszynistę, aby zobaczyć ostrzeżenia</b>
+        </p>`;
         document.getElementById("wynik").innerHTML = html;
     }
 </script>
