--- a/index.html
+++ b/index.html
@@ -393,6 +393,7 @@
         document.getElementById("wynik").innerHTML = html;
 }
     window.generujWOS=generujWOS
+</script>
 <script>
   const html = document.documentElement;
   const switchBtn = document.createElement('button');
