--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@
 }
     window.generujWOS=generujWOS
 </script>
-<span style="float: right;">&copy; Blue & Kacper9</span>
+<span style="float: right;">© Blue & Kacper9</span>
+<span style="float: right; margin-right: 20px; font-size: 0.8em;">Dane pobierane za pośrednictwem <a href="https://stacjownik-td2.spythere.eu">https://stacjownik-td2.spythere.eu</a></span>
 </body>
 </html>
