--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             --btn-bg: #0d47a1;
             --btn-hover: #1565c0;
             --btn-text: #ffffff;
+            --link-text: #000000;
             
             --table-border: #000000;
             --th-bg: #e8e8e8;
@@ -34,6 +35,7 @@
             --btn-bg: #64b5f6;
             --btn-hover: #42a5f5;
             --btn-text: #000000;
+            --link-text: #e0e0e0;
 
             --table-border: #555555;
             --th-bg: #333333;
@@ -49,6 +51,8 @@
             transition: background 0.3s, color 0.3s;
         }
         h1 { color: var(--text-heading); text-align: center; margin-bottom: 0.4em; }
+
+        a { color: var(--link-text);}
         
         .container { 
             background: var(--bg-container); 
@@ -422,6 +426,9 @@
     }
 </script>
 <span style="float: right;">© Blue & Kacper9 & bagi2424</span><br><br>
-<span style="float: right;">version 1.0.0</span>
+<section class="no-print">
+    <span style="float: right;">version 1.0.0</span><br><br>
+    <span style="float: right; font-size: 0.8em;">Dane pobierane za pośrednictwem API: <a href="https://stacjownik-td2.spythere.eu">Stacjownik</a></span>
+</section>
 </body>
 </html>
