--- a/index.html
+++ b/index.html
@@ -11,16 +11,7 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-WJVVXWKS32', {
-        debug_mode: true,
-        send_page_view: true,
-        cookie_domain: 'auto',
-        cookie_flags: 'SameSite=None;Secure'
-      });
-      
-      console.log('GA initialized - ID: G-WJVVXWKS32');
-      console.log('Domain:', window.location.hostname);
-      console.log('Protocol:', window.location.protocol);
+      gtag('config', 'G-WJVVXWKS32');
     </script>
     
     <title>WOS TD2 - Generator ostrzeżeń stałych</title>
