--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-WJVVXWKS32');
+      gtag('config', 'G-WJVVXWKS32', {
+        debug_mode: true
+      });
     </script>
     
     <title>WOS TD2 - Generator ostrzeżeń stałych</title>
