--- a/index.html
+++ b/index.html
@@ -4,17 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WJVVXWKS32"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-WJVVXWKS32', {
-        debug_mode: true
-      });
-    </script>
+    <!-- Umami Analytics -->
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="0b96c829-a037-4b08-93d8-b56a166dd79b"></script>
     
     <title>WOS TD2 - Generator ostrzeżeń stałych</title>
     <style>
